# kiki

./: .dockerignore  .env.docker  .env.example  .env.testing  .gitignore  AGENTS.md  ENTERPRISE_GUIDE.md  Makefile  README.md  conf.example.yaml  coverage.json  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.reports/: agent-code-analysis-report.md  agent-code-organization-issues.md  agent-execution-chain-completeness.md  agent-factory-refactor-deerflow-style.md  agent-refactoring-summary.md  ai-engineer-training2-analysis.md  ai-engineer-training2-phase1-complete.md  app-full-inspection.md  architecture-assessment.md  cache-usage-guide.md  checkpoint-persistence-complete.md  checkpoint-streaming-implementation.md  code-refactoring-summary.md  comment-cleanup-progress.md  compatibility-cleanup-complete.md  dead-code-analysis.md  deer-flow-analysis.md  deerflow-implementation-summary.md  enterprise-features-roadmap.md  langgraph-checkpoint-implementation.md  langgraph-compliance.md  multi-agent-architecture-improvement.md  multi-agent-architecture.md  multi-agent-implementation.md  multi-agent-unification.md  phase1-infrastructure-implementation.md  phase2-core-features-implementation.md  prompt-system-complete.md  yaml-config-system-complete.md
.scripts/: clean_comments.py
app/: main.py
app/agent/: CLAUDE.md  __init__.py  agent.py  base.py  chat_agent.py  checkpoint.py  clarification.py  context.py  examples.py  factory.py  multi_agent.py  rag.py  retry.py  state.py  state_manager.py  state_models.py  streaming.py  tool_interceptor.py  vector_store.py  workflow.py
app/api/: dependencies.py
app/auth/: __init__.py  api_key.py  middleware.py
app/config/: CLAUDE.md  __init__.py  dependencies.py  errors.py  loader.py  runtime.py  settings.py
app/core/: __init__.py  api_key.py  auth.py  config.py  configuration.py  dependencies.py  errors.py  limiter.py  llm.py  logging.py  mcp.py  memory.py  metrics.py  middleware.py  observability.py  redis.py  search.py  storage.py  store.py  tenant_api_key.py  tenant_middleware.py  token_bucket.py
app/evaluation/: __init__.py  dataset.py  datasets.py  evaluators.py  runner.py  service.py  types.py
app/infra/: CLAUDE.md  __init__.py  cache.py  database.py  redis.py  storage.py
app/llm/: __init__.py  cost_tracker.py  embeddings.py  providers.py  registry.py  service.py
app/middleware/: __init__.py  auth.py  observability.py  security.py
app/models/: __init__.py  agent.py  agent_config.py  agent_execution.py  api_key.py  auth_token.py  custom_agent.py  database.py  faq.py  knowledge.py  llm_model.py  mcp_service.py  memory.py  message.py  placeholder.py  session.py  task.py  tenant.py  thread.py  timestamp.py  user.py  vector.py
app/observability/: CLAUDE.md  __init__.py  audit.py  elk_handler.py  log_sanitizer.py  logging.py  metrics.py
app/rate_limit/: __init__.py  limiter.py  token_bucket.py
app/repositories/: CLAUDE.md  __init__.py  agent.py  agent_async.py  agent_execution.py  api_key.py  base.py  chunk.py  faq.py  knowledge.py  mcp_service.py  memory.py  message.py  model.py  placeholder.py  session.py  tenant.py  thread.py  user.py
app/retrievers/: __init__.py  bm25.py  conversational.py  elasticsearch.py  ensemble.py
app/schemas/: __init__.py  agent.py  agent_config.py  auth.py  chat.py  chunk.py  document.py  elasticsearch.py  faq.py  initialization.py  knowledge.py  knowledge_initialization.py  message.py  model.py  search.py  session.py  tenant.py  vector.py  web_search.py
app/services/: __init__.py  agent_clone.py  agent_system_service.py  api_key_management_service.py  auth.py  database.py  document_loaders.py  document_service.py  faq_service.py  (+16 more)
docs/: AGENT.md  AGENT_ARCHITECTURE_REVIEW.md  API_ALIGNMENT_TODO.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  DEVELOPMENT.md  FRONTEND.md  FRONTEND_API_MAPPING.md  MULTI_AGENT_EXAMPLES.md  README.md  STATE_PYDANTIC_MIGRATION.md  WEKNORA_COMPARISON.md  api-testing.md  check-and-test.md  e2e-testing.md  project-memory.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp-server/: README.md  kiki_mcp_server.py  main.py  pyproject.toml  test_mcp_server.py
migrations/: 001_init.sql  002_create_chat_streams.sql
prometheus/: prometheus.yml
scripts/: init_test_data.py  test_bind_tools_fix.py  test_langsmith_trace.py
tests/: conftest.py
(+331 files in other folders)
