[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiki-mcp-server"
version = "1.0.0"
description = "Kiki MCP Server - Model Context Protocol server for Kiki Agent Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kiki Team"}
]
maintainers = [
    {name = "Kiki Team"}
]
keywords = ["mcp", "model-context-protocol", "kiki", "agent-framework", "api-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/kiki"
Documentation = "https://docs.kiki.com"
Repository = "https://github.com/your-org/kiki"
"Bug Reports" = "https://github.com/your-org/kiki/issues"

[project.scripts]
kiki-mcp-server = "main:sync_main"

[tool.setuptools]
py-modules = ["kiki_mcp_server", "main"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
asyncio_mode = "auto"
